--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,8 @@
-icewm -- authors file.  2019-08-22
+icewm -- authors file.  2019-09-17
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: micrococo <micrococo@users.noreply.github.com>
+Author: Eduard Bloch <blade@debian.org>
 Author: jcsl <trcs@gmx.com>
 Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
 Author: Sarah Kriesch <ada.lovelace@gmx.de>
@@ -10,7 +12,6 @@ Author: Aleš Kastner <alkas@volny.cz>
 Author: Thomas Koller <tk120@protonmail.com>
 Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
 Author: David Medina <medipas@gmail.com>
-Author: Eduard Bloch <blade@debian.org>
 Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
 Author: Yi-Jyun Pan <pan93412@gmail.com>
 Author: Brian Bidulock <bidulock@openss7.org>
