--- a/man/icewm-keys.pod
+++ b/man/icewm-keys.pod
@@ -115,6 +115,9 @@ Locations for the F<keys> file are as follows:
  /etc/icewm/keys
  /usr/share/icewm/keys
 
+The locations are searched in the order listed; the first file found is
+read and the remainder ignored.
+
 =head1 SEE ALSO
 
 L<icewm(1)>.
