--- a/man/icewm-preferences.pod
+++ b/man/icewm-preferences.pod
@@ -1709,6 +1709,9 @@ Locations for the F<preferences> file are as follows:
  /etc/icewm/preferences
  /usr/share/icewm/preferences
 
+The locations are searched in the order listed; the first file found is
+read and the remainder ignored.
+
 =head1 SEE ALSO
 
 L<icewm(1)>,
